Moduł Drawing - layout i podpięcie eventów (#1)
* Nowy branch pod tworzenie rysowania

* Przymiarki do rysowania

* Górny pasek wyboru narzędzi

* Dodanie canvasa do Drawing

* Przyciski na panelu oraz zainstalowanie Font Awesome

* Wyniesienie przycisków do osobnego komponentu

* Małe poprawki wyglądu

* Dodanie event listenerów na zmiany w pasku wyboru

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "homepage": "https://patrycja20.github.io/ImageChanger/",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.7",
+    "@fortawesome/free-solid-svg-icons": "^5.4.2",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^4.1.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
